@@ -1,3 +1,8 @@
+2004-02-08  Kjartan Maraas <kmaraas@gnome.org>
+
+       * url-properties.c: Replace deprecated call to g_basename.
+	(#133174, Kjartan Maraas)
+
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
