@@ -1,3 +1,9 @@
+2004-02-08  Kjartan Maraas <kmaraas@gnome.org>
+
+	* file-types-icon-entry.c: Replace deprecated calls
+	to g_dirname and g_basename.
+	(#133174, Kjartan Maraas)
+
 2004-01-20 Sivaiah Nallagatla <snallagatla@novell.com>
 
 	* mime-edit-dialog.c (mime_add_dialog_new ) : do not try to set
